--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,6 +1,6 @@
 <main class="container-fluid min-vh-100">
-  <section class="w-100 min-vh-100 d-flex justify-content-center align-items-center">
-    <div class="col-md-5 shadow-lg py-2 pt-2 pb-4  px-md-4">
+  <section class="row min-vh-100 d-flex justify-content-center align-items-center">
+    <div class="col-md-6 col-lg-3 shadow-lg p-4">
       <router-outlet></router-outlet>
     </div>
   </section>
