--- a/src/app/parts/footer/footer.component.html
+++ b/src/app/parts/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<section class="row mt-3 border-top py-2">
+  <div class="col text-center">
+    <p class="">
+      © 2022. All Rights Reserved.
+    </p>
+  </div>
+</section>
