--- a/src/app/views/character-list/character-list.component.html
+++ b/src/app/views/character-list/character-list.component.html
@@ -1,1 +1,16 @@
-<p>character-list works!</p>
+<section class="row">
+  <aside class="col-md-3 col-lg-3 mb-3" *ngFor="let character of characters" >
+    <div class="card border-0" >
+      <img [src]="character.image" class="card-img-top" [alt]="character.name">
+      <div class="card-body d-flex flex-row justify-content-between border-end border-bottom border-start">
+        <p class="card-text mb-0">
+          {{character.name}}
+        </p>
+        <button type="button" class="btn btn-link" >
+          <fa-icon  [icon]="faStar"  ></fa-icon>
+        </button>
+      </div>
+    </div>
+
+  </aside>
+</section>
