--- a/src/app/parts/side-bar/side-bar.component.html
+++ b/src/app/parts/side-bar/side-bar.component.html
@@ -14,6 +14,14 @@
           </span>
         </a>
       </li>
+      <li class="list-group-item px-0 py-1">
+        <a class="w-100 text-capitalize btn btn-link text-start" (click)="logout()" >
+          Logout
+          <span class="float-end">
+            <fa-icon  [icon]="logoutIcon"  ></fa-icon>
+          </span>
+        </a>
+      </li>
     </ul>
   </div>
 </section>
