--- a/src/app/views/profile/profile.component.html
+++ b/src/app/views/profile/profile.component.html
@@ -1,1 +1,67 @@
-<p>profile works!</p>
+<div>
+  <h2 class="">
+    Profile
+  </h2>
+  <hr>
+  <form (ngSubmit)="onSubmit()" [formGroup]="ProfileForm" name="ProfileForm"  autocomplete="off" >
+    <section class="row mt-5 pl-md-3">
+      <div class="col-md-4">
+
+        <div class="form-group ">
+            <label for="name">Nombre completo</label>
+            <input type="text" [ngClass]="{ 'is-invalid': isValid()['name'].dirty && isValid()['name'].errors }" class="form-control" id="name" formControlName="name" [readonly]="loadPage" >
+            <small *ngIf="isValid()['name'].errors && isValid()['name'].dirty" class="form-text text-muted">
+                Nombre es requerido
+            </small>
+        </div>
+
+        <div class="form-group ">
+            <label for="email">Email</label>
+            <input type="email" [ngClass]="{ 'is-invalid': isValid()['email'].dirty && isValid()['email'].errors }" class="form-control" id="email" formControlName="email" [readonly]="loadPage"  >
+            <small *ngIf="isValid()['email'].errors && isValid()['email'].dirty"  class="form-text text-muted">
+                Email es requerido
+            </small>
+        </div>
+
+        <div class="form-group ">
+            <label for="city">Ciudad</label>
+            <input type="text" [ngClass]="{ 'is-invalid': isValid()['city'].dirty && isValid()['city'].errors }" class="form-control" id="registercity" formControlName="city" [readonly]="loadPage" >
+            <small *ngIf="isValid()['city'].errors && isValid()['city'].dirty" class="form-text text-muted">
+                ciudad es requerido
+            </small>
+        </div>
+
+        <div class="form-group ">
+            <label for="address">Address</label>
+            <input type="text" [ngClass]="{ 'is-invalid': isValid()['address'].dirty && isValid()['address'].errors }" class="form-control" id="address" formControlName="address" [readonly]="loadPage" >
+            <small *ngIf="isValid()['address'].errors && isValid()['address'].dirty" class="form-text text-muted">
+              Address es requerido
+            </small>
+        </div>
+
+        <div class="form-group ">
+            <label for="birthdate">Birthdate</label>
+            <input type="date" [ngClass]="{ 'is-invalid': isValid()['birthdate'].dirty && isValid()['birthdate'].errors }" class="form-control" id="birthdate" formControlName="birthdate" [readonly]="loadPage" >
+            <small *ngIf="isValid()['birthdate'].errors && isValid()['birthdate'].dirty" class="form-text text-muted">
+              birthdate es requerido
+            </small>
+        </div>
+      </div>
+
+      <div class="w-100 text-right mt-5 pt-3 mb-3">
+        <div class="input-group col-md-4">
+          <div class="input-group-prepend">
+            <button type="submit" class="btn btn-info" [disabled]="ProfileForm.invalid || loadPage" >
+                Actualizar <fa-icon *ngIf="!loadPage" [icon]="faPaperPlane"></fa-icon>
+
+                <img src="assets/img/load/arrow.gif"  *ngIf="loadPage" alt="icono de carga" class="animated_animated animated_fadeIn img-fluid icon-load-mini" >
+            </button>
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </form>
+</div>
+
+
